--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -11,7 +11,7 @@
                     <span class="post-date"><a href="#"><time class="entry-date"
                                                               datetime="{{ post.created_time }}">{{ post.created_time }}</time></a></span><!--这里改了-->
                     <span class="post-author"><a href="#">{{ post.author }}</a></span><!--这里改了-->
-                    <span class="comments-link"><a href="#">4 评论</a></span>
+                    <span class="comments-link"><a href="#">{{post.comment_num}} 评论</a></span>
                     <span class="views-count"><a href="#">{{post.views}} 阅读</a></span>
                 </div>
             </header>
