--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -108,49 +108,29 @@
                     <ul>
                         {% for category in category_list %}
                         <li>
-                            <a href="{% url 'blog:category' category.pk %}">{{ category.name }}
+                            <a href="{% url 'blog:category' category.name category.pk %}">{{ category.name }}
                             <span class="post-count">({{ category.num_posts }})</span>
                             </a>
                         </li>
                         {% empty %}
                         暂无分类！
                         {% endfor %}
-                  </ul>
+                    </ul>
                 </div>
-
+                
                 <div class="widget widget-tag-cloud">
                     <h3 class="widget-title">标签云</h3>
+                    {% get_tags as tags_list %}
                     <ul>
+                        {% for tag in tags_list%}
                         <li>
-                            <a href="#">Django</a>
+                            <a href="{% url 'blog:tags'  tag.pk %}">{{tag.name}}
+                            <span class="post-count">({{ tag.num_posts }})</span>
+                            </a>
                         </li>
-                        <li>
-                            <a href="#">Python</a>
-                        </li>
-                        <li>
-                            <a href="#">Java</a>
-                        </li>
-                        <li>
-                            <a href="#">笔记</a>
-                        </li>
-                        <li>
-                            <a href="#">文档</a>
-                        </li>
-                        <li>
-                            <a href="#">AngularJS</a>
-                        </li>
-                        <li>
-                            <a href="#">CSS</a>
-                        </li>
-                        <li>
-                            <a href="#">JavaScript</a>
-                        </li>
-                        <li>
-                            <a href="#">Snippet</a>
-                        </li>
-                        <li>
-                            <a href="#">jQuery</a>
-                        </li>
+                        {% empty %}
+                        暂无分类！
+                        {% endfor %}
                     </ul>
                 </div>
                 <div class="rss">
