--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
+{% load blog_tags %}
 {% block main %}
+    {% if error_msg %}
+        <p>{{ error_msg }}</p>
+    {% endif %}
     {% for post in post_list %}
         <article class="post post-{{ post.pk }}"><!--这个改的不明白-->
             <header class="entry-header">
@@ -26,7 +30,7 @@
         <div class="no-post">暂时没有文章</div>
     {% endfor %}
 
-      
+
         <!-- 简单分页效果
         <div class="pagination-simple">
             <a href="#">上一页</a>
@@ -62,3 +66,64 @@
         </div>
         {% endif %}
 {% endblock main %}
+
+{% block toc %}
+                <div class="widget widget-recent-posts">
+                    <h3 class="widget-title">最新文章</h3>
+                    {% get_recent_posts as recent_post_list %}<!--运行方法并保存-->
+                    <ul>
+                        {% for post in recent_post_list %}
+                        <li>
+                            <a href="{%url 'blog:detail' post.pk%}">{{post.title}}</a>
+                        </li>
+                        {% empty %}
+                        暂无文章！
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div class="widget widget-archives">
+                    <h3 class="widget-title">归档</h3>
+                    {% archives as date_list %}
+                    <ul>
+                        {% for date in date_list %}
+                        <li>
+                            <a href="{% url 'blog:archives' date.year date.month %}">{{ date.year }} 年 {{ date.month }} 月</a>
+                        </li>
+                        {% empty %}
+                        暂无归档！
+                        {% endfor %}
+                    </ul>
+                </div>
+
+                <div class="widget widget-category">
+                    <h3 class="widget-title">分类</h3>
+                    {% get_categories as category_list %}
+                    <ul>
+                        {% for category in category_list %}
+                        <li>
+                            <a href="{% url 'blog:category' category.pk %}">{{ category.name }}
+                            <span class="post-count">({{ category.num_posts }})</span>
+                            </a>
+                        </li>
+                        {% empty %}
+                        暂无分类！
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div class="widget widget-tag-cloud">
+                    <h3 class="widget-title">标签云</h3>
+                    {% get_tags as tags_list %}
+                    <ul>
+                        {% for tag in tags_list%}
+                        <li>
+                            <a href="{% url 'blog:tags'  tag.pk %}">{{tag.name}}
+                            <span class="post-count">({{ tag.num_posts }})</span>
+                            </a>
+                        </li>
+                        {% empty %}
+                        暂无分类！
+                        {% endfor %}
+                    </ul>
+                </div>
+                
+{% endblock toc %}
